@@ -1,5 +1,9 @@
 2008-10-24 Rafael Espindola  <espindola@google.com>
 
+	* lto-lang.c (input_cgraph_1): Iterate over nodes, not cgraph_nodes.
+
+2008-10-24 Rafael Espindola  <espindola@google.com>
+
 	* lto-lang.c (input_node): Avoid casts from pointers to ints of
 	different types.
 
